# ai-career-copilot

./: .gitignore  README.md  README_CN.md
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_glm_image.py  tsconfig.json
backend/app/: limiter.py  main.py
backend/app/api/: analyze.py  generate.py  jd.py  match.py
backend/app/models/: career_profile.py  customized_resume.py  match_result.py
backend/app/services/: career_analyzer.py  document_parser.py  input_classifier.py  jd_analyzer.py  job_matcher.py  llm_client.py  resume_generator.py
backend/app/services/llm/: __init__.py  base.py  deepseek_provider.py  factory.py  gemini_provider.py  glm_provider.py  router.py
backend/src/: index.ts
docs/: 01_PRD.md  02_Technical_Design.md  03_Data_Schema.md  04_Prompt_Design.md  05_API_Design.md  06_Development_Guide.md  06_Development_Plan.md  07_Development_Environment_Setup.md  07_Product_Backlog.md  08_AI_Design.md  09_AI_Workflow.md  09_Development_Log.md  development-log.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/custom-resume/: page.tsx
frontend/app/jd/: page.tsx
frontend/app/jd-match/: page.tsx
frontend/app/optimize/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: AppHeader.tsx  ClientProvider.tsx  LanguageSwitcher.tsx  Logo.tsx  ProgressStepper.tsx  StepperWrapper.tsx
frontend/i18n/: LanguageContext.tsx  translations.ts
(+1 files in other folders)
