[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "openai>=2.46.0",
    "pypdf>=6.1.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
]
